# functions

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  Makefile  cons.cpp  curry-test.cpp  curry.hpp  for.cpp  for.h  main.cpp  make.sh  match-test.cpp  match.hpp  maybe.hpp  maybe_test.cpp  option.hpp  quick-test.cpp  simpleMake.sh  sum.cpp  treeSum.cpp
lib/: CMakeLists.txt
src/: cons.hpp  curry.hpp  for.hpp  functions.hpp  main.hpp  match.hpp  maybe.hpp  option.hpp  option_traits.hpp  sum.hpp  treeSum.hpp
test/: CMakeLists.txt  cons_test.cpp  curry-test.cpp  for_test.cpp  functionsTest.cpp  main.cpp  mapTest.cpp  match-test.cpp  option_test.cpp  parent.cpp  parentAgain.cpp  parentScratch.cpp  sum.cpp  test.cpp  treeSum.cpp
